syntax = "proto3";


option go_package = "genproto/user_service";

package user_service;



service TeacherService {
    rpc Create(CreateTeacher) returns (Teacher) {}
    rpc GetByID(TeacherPrimaryKey) returns (Teacher) {}
    rpc GetList(GetListTeacherRequest) returns (GetListTeacherResponse) {}
    rpc Update(UpdateTeacher) returns (Teacher) {}
    rpc Delete(TeacherPrimaryKey) returns (TeacherEmpty) {}
    // rpc TeacherPanel(TeacherPanelRequest) returns (TeacherPanelResponse) {}
}


message TeacherEmpty{}

message TeacherPrimaryKey {
    string id = 1;
}

message CreateTeacher {
    string full_name = 1;
    string phone = 2;
    string password = 3;
    double salary = 4;
    string ielts_score = 5;
    string branch_id = 6;
}

message Teacher {
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string login = 5;
    double salary = 6;
    string ielts_score = 7;
    string branch_id = 8;
    string role_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message UpdateTeacher {
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string login = 5;
    double salary = 6;
    string ielts_score = 7;
    string branch_id = 8;

}

message GetListTeacherRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListTeacherResponse {
    int64 count = 1;
    repeated Teacher Teachers = 2;
}


message TeacherPanelRequest {
    string teacher_id = 1;
}
