syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;



service AssignStudentService {
    rpc Create(CreateAssignStudent) returns (AssignStudent) {}
    rpc GetByID(AssignStudentPrimaryKey) returns (AssignStudent) {}
    rpc GetList(GetListAssignStudentRequest) returns (GetListAssignStudentResponse) {}
    rpc Update(UpdateAssignStudent) returns (AssignStudent) {}
    rpc Delete(AssignStudentPrimaryKey) returns (AssignStudentEmpty) {}
}


message AssignStudentEmpty{}

message AssignStudentPrimaryKey {
    string id = 1;
}

message CreateAssignStudent {
    string event_id = 1;
    string student_id = 2;
}

message AssignStudent {
    string id = 1;
    string event_id = 2;
    string student_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message UpdateAssignStudent {
    string id = 1;
    string event_id = 2;
    string student_id = 3;
}

message GetListAssignStudentRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListAssignStudentResponse {
    int64 count = 1;
    repeated AssignStudent AssignStudents = 2;
}
